# comps

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  eval.yml
comps/cli/: format.py  history.py  main.py
comps/core/: config.py  logging.py  models.py
comps/db/: __init__.py  migrate.py  pool.py  queries.py
comps/eval/: dataset.py  gate.py  metrics.py  run.py
comps/ingest/: chunk.py  embed.py  extract.py  parse.py  pipeline.py
comps/search/: rerank.py  retrieve.py  service.py  understand.py
deploy/: DEPLOY.md  fly.api.toml  fly.worker.toml
docker/: api.Dockerfile  docker-compose.yml  worker.Dockerfile
eval/: sample_queries.json
migrations/: 0001_init.sql
tests/: conftest.py
tests/cli/: test_format.py  test_history.py
tests/eval/: test_metrics.py
tests/ingest/: test_chunk.py  test_parse.py
tests/search/: test_rerank.py  test_retrieve.py
